[package]
name = "nugget"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2" # Use x86 abstractions for in/out instructions

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# [profile.dev]
# panic = "abort" - we need to comment this out for running tests to avovid duplicate lang item errors

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"] # Append to QEMU args (allow quitting)
test-success-exit-code = 33 # (0x10 << 1) | 1 : map exit code to 0 so success shuts down qemu without failing cargo test